consolidation final features